<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_24"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_shorts"
        android:icon="@drawable/ic_whatshot_24"
        android:title="@string/title_shorts"/>

    <item
        android:id="@+id/navigation_upload"
        android:icon="@drawable/ic_add_24"
        android:title="@string/title_upload"/>

    <item
        android:id="@+id/navigation_subscription"
        android:icon="@drawable/ic_video_library_24"
        android:title="@string/title_subscription"/>

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_person_24"
        android:title="@string/title_account"/>
</menu>